# LedsUpWebServer

./: .gitignore  db.sqlite3  pyproject.toml  render.yaml.txt  requirements.txt
certificados/: cert.pem
ledsup/: admin.py  apps.py  artnet.py  consumers.py  context_processors.py  forms.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
ledsup/migrations/: 0001_initial.py  0002_alter_dispositivo_patch.py  0003_alter_dispositivo_matriz_x_and_more.py  0004_remove_showroom_matriz_x_total_and_more.py  0005_dispositivo_tipo_led.py  0006_chatmessage.py  0007_message_room_delete_chatmessage_message_room_and_more.py
middleware/: global_context.py
mysite/: asgi.py  disable_csrf_webview.py  middleware.py  settings.py  urls.py
templates/: 400.html  403.html  404.html  500.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
users/: backends.py  forms.py  urls.py  validators.py  views.py
web/: admin.py  context_processors.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
web/migrations/: 0001_initial.py  0002_auto_20210919_1025.py  0003_auto_20210920_2217.py  0003_galeria_videosproducto_url_video_and_more.py  0004_rename_galeria_evento_and_more.py  0005_errores.py  0006_alter_errores_options.py  0007_rename_detalle_evento_pie_de_imagen_and_more.py  0008_evento_imagen_delete_imageneseventos.py  0009_alter_evento_imagen_alter_imagenesproducto_imagen.py  0010_alter_imagenesproducto_imagen.py  (+1 more)
(+51 files in other folders)
