[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^4.0"
python = "^3.8"
djangorestframework = "^3.13.1"
channels = "^3.0.5"
asgiref = "^3.5.2"
[tool.poetry.dev-dependencies]
